CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Response__c/SDO_Analytics_Survey_Response__c.object-meta.xml
<CustomObject>
    <description>Shadow object for SurveyResponse. Stores demo CSAT survey response data for Service Insights Cases CSAT dashboard. Feeds ssot__SurveyResponse__dlm via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO Analytics Survey Response</label>
    <nameField>
        <displayFormat>SRSP-{00000}</displayFormat>
        <label>SDO Analytics Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>