CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Response__c/fields/Real_Survey_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Real_Survey_Version_Id__c</fullName>
    <description>Stores the standard SurveyVersion record ID. Maps to ssot__SurveyVersionId__c on ssot__SurveyResponse__dlm. Replaces the shadow-object lookup.</description>
    <label>Real Survey Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>