CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Response__c/fields/Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_Time__c</fullName>
    <label>Submitted Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>