CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Response__c/fields/Survey_Invitation_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce ID of the related SurveyInvitation. Maps to ssot__SurveyInvitationId__c on ssot__SurveyResponse__dlm.</description>
    <label>Survey Invitation Id</label>
    <referenceTo>SDO_Analytics_Survey_Invitation__c</referenceTo>
    <relationshipName>SurveyInvitationId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>