CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Response__c/fields/Survey_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Id__c</fullName>
    <description>DMO primary key. Maps to ssot__Id__c on ssot__SurveyResponse__dlm.</description>
    <externalId>true</externalId>
    <label>Survey Response Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>